// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rabbitChase should be able to change the settings 1`] = `
Object {
  "carrots": Array [
    Object {
      "index": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "index": 6,
      "x": 6,
      "y": 0,
    },
    Object {
      "index": 11,
      "x": 3,
      "y": 1,
    },
    Object {
      "index": 12,
      "x": 4,
      "y": 1,
    },
    Object {
      "index": 21,
      "x": 5,
      "y": 2,
    },
    Object {
      "index": 22,
      "x": 6,
      "y": 2,
    },
    Object {
      "index": 32,
      "x": 0,
      "y": 4,
    },
    Object {
      "index": 33,
      "x": 1,
      "y": 4,
    },
    Object {
      "index": 37,
      "x": 5,
      "y": 4,
    },
    Object {
      "index": 43,
      "x": 3,
      "y": 5,
    },
    Object {
      "index": 47,
      "x": 7,
      "y": 5,
    },
    Object {
      "index": 51,
      "x": 3,
      "y": 6,
    },
    Object {
      "index": 52,
      "x": 4,
      "y": 6,
    },
    Object {
      "index": 56,
      "x": 0,
      "y": 7,
    },
    Object {
      "index": 62,
      "x": 6,
      "y": 7,
    },
  ],
  "cols": 8,
  "left": Array [
    2,
    2,
    2,
    1,
    1,
    3,
    1,
    3,
  ],
  "rows": 8,
  "top": Array [
    2,
    2,
    2,
    1,
    3,
    1,
    1,
    3,
  ],
}
`;

exports[`rabbitChase should be able to change the settings 2`] = `
"┏━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┓
┃     |  2  |  2  |  2  |  1  |  3  |  1  |  1  |  3  ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  2  |  🥕 |     |     |     |     |     |  🥕 |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  2  |     |     |     |  🥕 |  🥕 |     |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  2  |     |     |     |     |     |  🥕 |  🥕 |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  1  |     |     |     |     |     |     |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  1  |  🥕 |  🥕 |     |     |     |  🥕 |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  3  |     |     |     |  🥕 |     |     |     |  🥕 ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  1  |     |     |     |  🥕 |  🥕 |     |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  3  |  🥕 |     |     |     |     |     |  🥕 |     ┃
┗━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┛"
`;

exports[`rabbitChase should be able to change the settings 3`] = `
"┏━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┓
┃     |  2  |  2  |  2  |  1  |  3  |  1  |  1  |  3  ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  2  |  🥕 |     |     |     |  🐇 |     |  🥕 |  🐇 ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  2  |  🐇 |     |  🐇 |  🥕 |  🥕 |     |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  2  |     |     |     |     |  🐇 |  🥕 |  🥕 |  🐇 ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  1  |     |  🐇 |     |     |     |     |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  1  |  🥕 |  🥕 |     |     |     |  🥕 |  🐇 |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  3  |  🐇 |     |  🐇 |  🥕 |  🐇 |     |     |  🥕 ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  1  |     |     |     |  🥕 |  🥕 |     |     |  🐇 ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  3  |  🥕 |  🐇 |     |  🐇 |     |  🐇 |  🥕 |     ┃
┗━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┛"
`;

exports[`rabbitChase should generate a game board 1`] = `
"┏━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┓
┃     |  1  |  1  |  2  |  0  |  3  |  0  ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  2  |     |     |  🥕 |  🥕 |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  0  |     |     |     |     |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  2  |     |  🥕 |     |     |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  1  |     |  🥕 |     |     |  🥕 |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  1  |     |     |     |     |     |  🥕 ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  1  |     |  🥕 |     |     |     |     ┃
┗━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┛"
`;

exports[`rabbitChase should generate a game board 2`] = `
"┏━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┓
┃     |  2  |  0  |  1  |  1  |  0  |  3  ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  1  |     |     |     |     |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  1  |  🥕 |     |     |     |     |  🥕 ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  1  |     |     |     |  🥕 |     |  🥕 ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  2  |     |     |     |     |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  0  |     |     |  🥕 |     |     |  🥕 ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  2  |     |  🥕 |     |     |     |     ┃
┗━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┛"
`;

exports[`rabbitChase should generate a game board 3`] = `
"┏━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┓
┃     |  2  |  0  |  2  |  1  |  0  |  2  ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  3  |     |     |     |  🥕 |  🥕 |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  0  |  🥕 |     |     |     |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  1  |     |     |  🥕 |     |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  0  |     |     |     |     |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  1  |  🥕 |     |     |  🥕 |     |  🥕 ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  2  |     |     |     |     |     |     ┃
┗━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┛"
`;

exports[`rabbitChase should render it to json correctly 1`] = `
Object {
  "carrots": Array [
    Object {
      "index": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "index": 4,
      "x": 4,
      "y": 0,
    },
    Object {
      "index": 9,
      "x": 3,
      "y": 1,
    },
    Object {
      "index": 15,
      "x": 3,
      "y": 2,
    },
    Object {
      "index": 25,
      "x": 1,
      "y": 4,
    },
    Object {
      "index": 28,
      "x": 4,
      "y": 4,
    },
    Object {
      "index": 32,
      "x": 2,
      "y": 5,
    },
  ],
  "cols": 6,
  "left": Array [
    3,
    0,
    1,
    1,
    0,
    2,
  ],
  "rows": 6,
  "top": Array [
    0,
    3,
    0,
    1,
    2,
    1,
  ],
}
`;

exports[`rabbitChase should render it to json correctly 2`] = `
"┏━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┓
┃     |  0  |  3  |  0  |  1  |  2  |  1  ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  3  |  🥕 |     |     |     |  🥕 |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  0  |     |     |     |  🥕 |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  1  |     |     |     |  🥕 |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  1  |     |     |     |     |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  0  |     |  🥕 |     |     |  🥕 |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  2  |     |     |  🥕 |     |     |     ┃
┗━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┛"
`;

exports[`rabbitChase should render it to json correctly 3`] = `
"┏━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┯━━━━━┓
┃     |  0  |  3  |  0  |  1  |  2  |  1  ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  3  |  🥕 |  🐇 |     |  🐇 |  🥕 |  🐇 ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  0  |     |     |     |  🥕 |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  1  |     |     |     |  🥕 |  🐇 |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  1  |     |  🐇 |     |     |     |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  0  |     |  🥕 |     |     |  🥕 |     ┃
┠─────┼─────┼─────┼─────┼─────┼─────┼─────┨
┃  2  |     |  🐇 |  🥕 |     |  🐇 |     ┃
┗━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┷━━━━━┛"
`;
